--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ debugpy==1.4.3
 decorator==5.1.0
 defusedxml==0.7.1
 entrypoints==0.3
+et-xmlfile==1.1.0
+html5lib==1.1
 idna==3.2
 ipykernel==6.4.1
 ipython==7.27.0
@@ -42,6 +44,7 @@ nest-asyncio==1.5.1
 nltk==3.6.2
 notebook==6.4.4
 numpy==1.21.2
+openpyxl==3.0.9
 packaging==21.0
 pandas==1.3.3
 pandas-datareader==0.10.0
